@@ -2,3 +2,8 @@
 
 ![UI App](https://github.com/vothuckhanhhuyen/OrderManagementApplication/blob/master/src/test/App.PNG)
 The UI of Application
+
+**To run this application:**
+1. Download javafx library at [this](https://openjfx.io/)
+2. In /test/Aims.java
+3. Run /test/Aims.java, choose Run as configurations, add VM arguments: --module-path "path to javafx lib" --add-modules javafx.controls,javafx.fxml
